<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/item_toolbar"
            android:layout_width="match_parent"
            app:title="DashBoard"
            app:titleTextColor="#FFF"
            app:navigationIcon="@drawable/ic_arrow_back_toolbar"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/item_toolbar"
            android:id="@+id/rv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_add_todo"
            app:backgroundTint="@color/colorPrimary"
            android:layout_margin="20dp"
    />
</RelativeLayout>