<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/ev_todo"
            android:backgroundTint="#FFF"
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

</RelativeLayout>