<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:id="@+id/tv_todo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="15dp"
            android:textColor="#FFF"

    />
    <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
           android:layout_alignParentEnd="true"
            android:src="@drawable/ic_vertical_dot"
            android:padding="12dp"

    />

</RelativeLayout>